node-ports/wine/wine-clusterIP-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: wine-service
spec: 
  selector: 
    app: wine
  ports: 
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
