node-ports/wine/wine-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: wine-service
spec: 
  type: NodePort
  selector: 
    app: wine
  ports: 
    - port: 8086
      targetPort: 80
      nodePort: 30007
