node-ports/wine/wine-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wine-ingress
spec:
  rules:
  - host: wine.bar.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wine-service
            port:
              number: 8086
